--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+  background: #382087;
+  background: linear-gradient(138deg, rgba(56, 32, 135, 1) 0%, rgba(28, 17, 69, 1) 32%, rgba(16, 8, 33, 1) 80%, rgba(0, 0, 0, 1) 100%);
+
+  min-height: 100vh;
+  min-width: 100vw;
+
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
